[gd_scene load_steps=4 format=3 uid="uid://ci0lql3qqjhfx"]

[ext_resource type="Theme" uid="uid://cw45l3bp8f0il" path="res://ui/Themes/my_theme.tres" id="1_3ofst"]
[ext_resource type="Script" path="res://ui/ConfirmModal/confirm_modal.gd" id="1_we5ad"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jiic"]
bg_color = Color(0.201527, 0.201527, 0.201527, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 0.097)
shadow_size = 20
shadow_offset = Vector2(0, 2)

[node name="ConfirmModal" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_3ofst")
color = Color(0.1672, 0.19912, 0.38, 0.345098)
script = ExtResource("1_we5ad")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -135.5
offset_right = 375.0
offset_bottom = 135.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0jiic")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirmation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 1
text = "This will delete things."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SpacerLeft" type="Control" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OkButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"GreenButton"
text = "Ok"

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"RedButton"
text = "Cancel"

[node name="SpacerRight" type="Control" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
